--- a/day-02-blog-preview-card/index.html
+++ b/day-02-blog-preview-card/index.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Title</title>
+  <title>Blog preview card</title>
 </head>
 <body>
-
+<section class="container">
+  <div class="card-box">
+    <div class="card-img">
+      <img src="./img/Blog%20Image.png" alt="Card Image">
+    </div>
+    <div class="card-description">
+      <button class="card-description-btn">Learning</button>
+      <p class="description-date">Published 21 Dec 2023</p>
+      <h3 class="description-title">HTML & CSS foundations</h3>
+      <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    </div>
+    <div class="card-author">
+      <div class="author-img">
+        <img src="./img/userpic.png" alt="User image">
+      </div>
+      <p class="author-name">Greg Hooper</p>
+    </div>
+  </div>
+</section>
 </body>
 </html>
