--- a/day-03-faq-accordion/index.html
+++ b/day-03-faq-accordion/index.html
@@ -8,7 +8,63 @@
 </head>
 <body>
 
-<h1>Hello world</h1>
+<section class="container">
+  <div class="bg-image">
+    <img src="./img/background-pattern-desktop.svg" alt="">
+  </div>
+
+  <div class="box">
+    <div class="title">
+      <div>
+        <img src="./img/icon-star.svg" alt="">
+      </div>
+      <h3>FAQs</h3>
+    </div>
+
+    <div class="accordion-box">
+      <div class="accordion-item">
+        <p class="accordion-title">What is Frontend Mentor, and how will it help me? <span><img
+                src="./img/icon-plus.svg" alt=""></span></p>
+        <div class="accordion-content">
+          <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
+            with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <p class="accordion-title">Is Frontend Mentor free? <span><img src="./img/icon-plus.svg" alt=""></span></p>
+        <div class="accordion-content">
+          <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
+            with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <p class="accordion-title">Can I use Frontend Mentor projects in my portfolio? <span><img
+                src="./img/icon-plus.svg" alt=""></span></p>
+        <div class="accordion-content">
+          <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
+            with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <p class="accordion-title">How can I get help if I'm stuck on a challenge? <span><img src="./img/icon-plus.svg"
+                                                                                              alt=""></span></p>
+        <div class="accordion-content">
+          <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
+            with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script src="./js/main.js"></script>
 
 </body>
 </html>
